# Whisper-Wings-app

./: .env.sample  .gitignore  compose.yml  package-lock.json  package.json
.github/workflows/: pipeline.yml
Docker/: Dockerfile
conf/nginx/: default.conf
src/: app.ts  server.ts  server.worker.ts
src/app/middlewares/: fileUploadHandler.ts
src/app/modules/admin/: admin.controller.ts  admin.route.ts  admin.service.ts  admin.type.ts  admin.validation.ts
src/app/modules/auth/: auth.controller.ts  auth.service.ts
src/app/modules/category/: catagory.interface.ts  category.model.ts
src/app/modules/sherpas/: sharpas.interface.ts  sherpas.model.ts
src/app/modules/subscriptions/: subscribed.model.ts  subscription.interface.ts  subscription.model.ts
src/app/modules/user/: user.controller.ts  user.interface.ts  user.model.ts  user.route.ts  user.service.ts  user.validation.ts
src/app/modules/whisper/: whisper.interface.ts  whisper.model.ts
src/app/modules/whisper_part/: part.whisper.interface.ts  part.whisper.model.ts
src/config/: index.ts
src/enums/: langouage.ts
src/python/: .python-version  README.md  main.py  pyproject.toml  server.py
src/routes/: index.ts
src/shared/: emailTemplate.ts  getFilePath.ts  unlinkFile.ts
