[project]
name = "Audio_to_LRC"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioread>=3.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "speechrecognition>=3.14.3",
    "uvicorn>=0.35.0",
]
